# rust-workspace

./: .gitignore  Cargo.toml  README.md  TODO.md  leak_test.sh
.cargo/: config.toml
.windsurf/rules/: cpp-convert.md
asm/: Cargo.toml  README.md
asm/src/: main.rs
cg/: Cargo.toml
cg/src/: main.rs
cg/src/triangle/: mod.rs  programs.rs  renderer.rs  triangle.wgsl  triangle_mesh.rs
cg/src/wgpu_demo/: README.md  camera.rs  mod.rs  renderer.rs  scene.rs  triangle.rs  triangle.wgsl  triangle_mesh.rs
compiler/: Cargo.toml
compiler/src/: code_generator.rs  compilation_engine.rs  main.rs  sym_table.rs  tests.rs  tokenizer.rs  tokens.rs  vm_compilation_engine.rs  xml_compilation_engine.rs
leetcode/: Cargo.toml
leetcode/src/: leetcode400.rs  leetcode800.rs  leetcode900.rs  main.rs
nand2tetris/: LICENSE  README.md
nand2tetris/asm/: Cargo.toml
nand2tetris/compiler/: Cargo.toml  README.md
nand2tetris/compiler/src/: tests.rs  tokens.rs
nand2tetris/vm/: Cargo.toml
nand2tetris/vm/src/: code_writer.rs  command_type.rs  main.rs  parser.rs  program.rs
neatpad_rs/: Cargo.toml
playground/: Cargo.toml  TODO.md
playground/src/: claire_voyant.rs  dir_tree_size.rs  main.rs  mat_mul.rs  rayon_bench.rs  sobel.rs
rcore_os/: Cargo.toml  debug.sh  gdb.sh  run.sh
rcore_os/src/: entry.asm  lang_items.rs  main.rs
rcore_os/src/programs/: mod.rs  stack_trace.rs
rust_libs/: Cargo.toml  TODO.md
rust_libs/src/: binary_utils.rs  dlink_list.rs  kmp.rs  lib.rs  macro_utils.rs  main.rs  nullable_ptr.rs  shared_list.rs  utils.rs
rust_libs/tests/: dlink_list_test.rs
sdb/: .gitignore  Cargo.toml  README.md  build.rs
sdb/resource/: Cargo.toml  anti_debugger.cpp  blocks.cpp  global_variable.cpp  hello_sdb  loop_assign.rs  member_pointer.cpp  memory.cpp  multi_cu_main.cpp  reg_mm0_write.s  reg_read.s  reg_write.s  step.cpp
sdb/src/: build.rs  libsdb.rs  sdb.rs  test.rs  test_utils.rs  tests.rs
sdb/src/libsdb/: bindings.rs  bit.rs  breakpoint.rs  breakpoint_site.rs  disassembler.rs  dwarf.rs  elf.rs  ffi.rs  mod.rs  parse.rs  pipe.rs  process.rs  register_info.rs  registers.rs  sdb_error.rs  stack.rs  stoppoint_collection.rs  syscalls.rs  target.rs  traits.rs  types.rs  utils.rs  watchpoint.rs
sdb/src/libsdb/codegen/: Cargo.toml  codegen.rs  reg_info.txt
sdb/src/libsdb/registers_codegen/: Cargo.toml  codegen.rs
src/: dlink_list.rs  dlink_list_test.rs  lib.rs  main.rs  mat_mul.rs  nullable_ptr.rs  rc_refcell_option.rs  shared_list.rs  smart_pointer.rs
tests/: dlink_list_test.rs
vm/: Cargo.toml  README.md
vm/src/: code_writer.rs  command_type.rs  lib.rs  main.rs  parser.rs  program.rs
wgpu_projects/cg/src/: main.rs
wgpu_projects/cg/src/wgpu_demo/: camera.rs  triangle.rs
