[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true
profile-rustflags = ["-A dead_code"]

[profile.release]
debug = false
profile-rustflags = ["-A dead_code"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
