[package]
name = "cg"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17.1"
tokio = { version = "1.33", features = ["full"] }
env_logger = "0.10.0"
winit = "0.28.7"
bytemuck = "1.14.0"
log = "0.4.20"
glam = "0.24.2"

[lints.clippy]
needless_return = "allow"

[lints.rust]
unused = "allow"