[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[profile.dev]
profile-rustflags = ["-A dead_code"]
incremental = true

[profile.release]
profile-rustflags = ["-A dead_code"]
incremental = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
docopt = "1"
rayon = "1.7.0"

[dependencies.serde]
version = "1.0.85"
features = ["derive"]
