[package]
name = "playground"
version = "0.1.0"
edition = "2021"


[profile.release]
strip = true
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
docopt = "1"
rayon = "1.7.0"
regex = "1.5"

[dependencies.serde]
version = "1.0.85"
features = ["derive"]
