[package]
name = "sdb"
version = "0.1.0"
edition = "2024"


[lib]
name = "libsdb"
path = "src/libsdb/mod.rs"

[[bin]]
name = "sdb"
path = "src/sdb.rs"

[dependencies]
rustyline = "15.0.0"
zydis = "4.1.1"
log = "0.4"
once_cell = "1.21.0"
register_codegen = { path = "src/libsdb/codegen" }
bytemuck = "1.22.0"
num_enum = "0.7.3"
extended = "0.1.0"
indoc = "2.0.6"

[dependencies.nix]
features = ["process", "ptrace"]
version = "0.29.0"

[lints.clippy]
needless_return = "allow"