[package]
name = "sdb"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Book: Building a Debugger, rust port of C++ debugger Sdb https://github.com/TartanLlama/sdb/tree/main."
repository = "https://github.com/qhc99/rust-workspace/tree/master/sdb"
keywords = ["sdb", "debugger"]

[lib]
name = "libsdb"
path = "src/libsdb/mod.rs"

[[bin]]
name = "sdb"
path = "src/sdb.rs"

[dependencies]
rustyline = "15.0.0"
zydis = "4.1.1"
once_cell = "1.21.0"
libsdb_register_codegen = { path = "src/libsdb/codegen", version = "*"}
bytemuck = "1.22.0"
num_enum = "0.7.3"
extended = "0.1.0"
indoc = "2.0.6"
regex = "1.11.1"
elf = "0.7.4"
zydis-sys = "0.1.2"
syscall-numbers = "4.0.2"
multimap = "0.10.1"
goblin = "0.10.0"

[dependencies.nix]
features = ["process", "ptrace", "personality", "uio", "mman"]
version = "0.29.0"

[lints.clippy]
needless_return = "allow"