[package]
name    = "libsdb_register_codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Register Code generation part in the book: Building a Debugger, rust port of C++ debugger Sdb https://github.com/TartanLlama/sdb/tree/main."
repository = "https://github.com/qhc99/rust-workspace/tree/master/sdb/src/libsdb/codegen"
keywords = ["sdb", "debugger"]
rust-version = "1.88"


[lib]
proc-macro = true
path = "codegen.rs"

[dependencies]
regex = "1.11.0"
proc-macro2 = "1.0.95"
syn = "2.0.100"
quote = "1.0.40"

[dependencies.nix]
version = "0.29.0"